GNOME Bugzilla – Bug 726362
rtsp-stream: fix a typo where IPv4 and IPv6 addresses were confused.
Last modified: 2014-03-15 14:46:35 UTC
The primary change by this patch is plugging a memory leak when acquiring or reserving an address from the addresspool. Another minor patch fixes a typo where IPv4 and IPv6 addresses were mixed. These addresses seem to be an alternative to using an address pool, and so might better be removed..? What was the intent behind adding these to the RTSPStream? At least this patch makes the code make sense. While fixing this problem the unnecessary use of double-pointers was removed. Review and enjoy! :)
Created attachment 271937 [details] [review] Proposed patch fixing IPV4 and IPV6 typos.
Created attachment 271938 [details] [review] Proposed patch refraining from using double-pointers unnecessarily.
Created attachment 271939 [details] [review] Proposed patch plugging leak of address object in RTSPStream.
Created attachment 271996 [details] [review] Proposed patch fixing IPV4 and IPV6 typos.
After reading the code more closely it was obivous why the double-pointers and the missing free was indeed missing, sorry about the churn.
commit 0b617dd5bd4311c863d37defd2e5b8c3949e861c Author: Sebastian Rasmussen <sebras@hotmail.com> Date: Fri Mar 14 19:03:24 2014 +0100 rtsp-stream: Don't mix IPv4 and IPv6 addresses Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726362