rtsp-stream: Don't mix IPv4 and IPv6 addresses

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726362